// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-4r86n overlay"
    role="article"
  >
    <div
      class="content svelte-4r86n"
    >
      <span
        class="artwork svelte-4r86n"
      />
       
      <p
        class="controls svelte-4r86n"
      >
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4r86n"
    >
      <h3
        class="svelte-4r86n"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        3 tracks
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Playlist/Playlist.tools.svelte: Single track 1`] = `
<div>
   
  <span
    class="svelte-4r86n overlay"
    role="article"
  >
    <div
      class="content svelte-4r86n"
    >
      <span
        class="artwork svelte-4r86n"
      />
       
      <p
        class="controls svelte-4r86n"
      >
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="play"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-1e4q28k"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-1e4q28k"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4r86n"
    >
      <h3
        class="svelte-4r86n"
      >
        My favourites
      </h3>
       
      <h4
        slot="details"
      >
        1 track
      </h4>
    </header>
  </span>
</div>
`;
